# task2

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: CI.yml
matrix_tranposition_lib/: CMakeLists.txt
matrix_tranposition_lib/headers/: m_transpose.h
matrix_tranposition_lib/sources/: m_transpose.c
multy_matrix_tranposition_lib/: CMakeLists.txt
multy_matrix_tranposition_lib/headers/: th_m_transpose.h
multy_matrix_tranposition_lib/sources/: th_m_transpose.c
test/: CMakeLists.txt  tests.cpp
