cmake_minimum_required(VERSION 3.18.4)
project(tests)

set(CMAKE_CXX_STANDARD 17)
string(APPEND CMAKE_CXX_FLAGS " -fprofile-arcs -ftest-coverage -O0")
if (BUILD_SANITIZERS)
    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=address -fsanitize=undefined -fsanitize=leak")
endif()
if (BUILD_SANITIZERS_THREAD)
    string(APPEND CMAKE_CXX_FLAGS " -fsanitize=thread")
endif()
string(APPEND CMAKE_EXE_LINKER_FLAGS " -coverage -lgcov")

file(GLOB SOURCES *.cpp)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTest gtest_main)

add_executable(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC ${M_TRANSPOSE_LIB_INCLUDE_DIRS} ${TH_M_TRANSPOSE_LIB_INCLUDE_DIRS} ${GTest_INCLUDE_DIRECTORIES})
target_link_libraries(${PROJECT_NAME} ${M_TRANSPOSE_LIB_LIBRARIES} ${TH_M_TRANSPOSE_LIB_LIBRARIES} ${GTest_LIBRARIES})
